# Kyiv_emulator

./: CMakeLists.txt  LICENSE  README.md  ROM.txt  commands.txt  commans.txt  k_memory.h  kyiv.h  kyiv_test.cpp  logical_functions.py  main.cpp  processor.py  punc_cards_out.txt  punch_cards_in.txt  punched_tape.txt  registers.py  square_root.py  tempDisasm.txt  test_1.txt  test_2.txt  tests.cpp
inc/: asm_disasm.h  kyiv.h
inc/emulator/: asm_disasm.h  kyiv.h
inc/interface/: mainwindow.h
libs/: komytators.txt  runge_kutta.txt  sqrt_and_friends.txt
mem/: ROM.txt  magnetic_drum.txt  punch_cards_in.txt  punched_tape.txt
src/: asm_disasm.cpp  main.cpp
src/emulator/: asm_disasm.cpp  mainKyiv.cpp
src/interface/: mainwindow.cpp  mainwindow.ui
test/: CMakeLists.txt  kyiv_test.cpp
test/inc/: kyiv.h
test/src/: main.cpp
web/build-kyiv_web-Desktop-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
web/build-kyiv_web-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-205ad7b45dcaf4c388f0.json  cmakeFiles-v1-13963d77ed765b3938fc.json  codemodel-v2-4136e22310eb11c0b14b.json  index-2021-11-29T16-51-23-0231.json  target-kyiv_web-Debug-1c9470f04075e363d72f.json  target-kyiv_web_autogen-Debug-5cec9ed5d0f2756e110a.json  target-kyiv_web_autogen_timestamp_deps-Debug-f80172780aca0961f979.json
web/kyiv_web/: CMakeLists.txt
